<resources>
    <string name="app_name">Three_In_A_Row</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="highscore">High Scores</string>
    <string name="nologin">Currently not logged in.</string>
    <string name="restart">Restart Game</string>
    <string name="timespent">Time Spent:</string>
    <string name="currentturn">Current Turn:</string>
    <string name="invalidmove">Invalid move.</string>
    <string name="p1win">Player 1 Wins!</string>
    <string name="p2win">Player 2 Wins!</string>
    <string name="colour1">Colour 1:</string>
    <string name="colour2">Colour 2:</string>
    <string name="gridsize">Grid Size:</string>
    <string name="savesettings">Save Settings</string>
    <string name="resetdefault">Reset To Default</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_account">Don\'t have an account? Sign up</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>

    <!-- TODO: Drop down menu, follow: https://www.geeksforgeeks.org/exposed-drop-down-menu-in-android/ -->

    <string-array name="grid_sizes">
        <item>4 x 4</item>
        <item>5 x 5</item>
        <item>6 x 6</item>
    </string-array>
</resources>